# Bot-Talios

./: .editorconfig  .gitignore  .pre-commit-config.yaml  FASE2_PROGRESSO_ATUAL.md  main.py  noxfile.py  pyproject.toml  requirements.txt
Readme/: ANALISE_PROJETO_ATUAL.md  ANALISE_REPOSITORIOS_DISCORD_BOT.md  GUIA_RAPIDO.md  MELHORIAS_IMPLEMENTADAS.md  MELHORIAS_PRIORIDADES.md  PROGRESS_PHASE1.md  PROGRESS_PHASE2.md  README.md  README_COMPLETE.md  SISTEMA_PERSONALIZACAO.md  STATUS_FINAL.md
locales/: en-US.json  es-ES.json  pt-BR.json
src/: __init__.py
src/commands/: __init__.py
src/commands/admin/: config_system.py  status.py
src/commands/announce/: __init__.py  announce.py  announce_advanced.py
src/commands/antispam/: __init__.py  antispam_advanced.py  antispam_config.py  antispam_stats.py
src/commands/autorole/: autorole_manage.py  autorole_setup.py  autorole_test.py
src/commands/backup/: __init__.py  backup_create.py  backup_manage.py
src/commands/ban/: ban.py
src/commands/case/: case_system.py
src/commands/channel/: __init__.py  channel_manager.py
src/commands/communication/: __init__.py  communication_system.py  say.py
src/commands/container_builder/: __init__.py  container_builder.py  container_system.py
src/commands/embed/: __init__.py  embed_builder.py
src/commands/fun/: 8ball.py  coinflip.py  dice.py  fun_system.py  meme.py
src/commands/giveaway/: giveaway_end.py  giveaway_list.py  giveaway_reroll.py  giveaway_start.py
src/commands/levelcard/: __init__.py  levelcard.py
src/commands/leveling/: leaderboard.py  level.py
src/commands/moderation/: ban_advanced.py  kick.py  moderation_advanced.py  purge.py  slowmode.py  timeout_advanced.py  warn.py
src/commands/music/: music_system.py  play.py  skip.py  stop.py
src/commands/mute/: mute_system.py
src/commands/note/: __init__.py  note_create.py  note_manage.py
src/commands/poll/: poll_create.py  poll_list.py  poll_results.py
src/commands/role/: role_manage.py  role_reaction.py
src/commands/sticky/: sticky_system.py
src/commands/suggestion/: suggestion_create.py  suggestion_list.py  suggestion_manage.py
src/commands/ticket/: ticket_create.py  ticket_list.py
src/commands/user/: __init__.py  user_clear_history.py  user_history.py  user_history_backup.py  user_nick.py
src/commands/utility/: container_builder.py  embed_builder_v2.py  ping.py  server_info.py
src/commands/voice/: voice_system.py
src/commands/welcome/: welcome_setup.py
src/data/: antispam.py  backup.py  giveaways.py  leveling.py  logs.py  sticky.py  suggestions.py  tickets.py  welcome.py
src/events/: __init__.py  antispam_handler.py  container_handler.py  creator_leaves_handler.py  custom_variable_change.py  giveaway_button_handler.py  guild_member_add.py  interaction_create.py  leveling_message_xp.py  log_channel_create.py  log_channel_delete.py  log_member_add.py  log_member_remove.py  log_message_delete.py  log_message_update.py  log_role_update.py  message_create.py  moderation_handler.py  reaction_add.py  reaction_remove.py  ready.py  restarts_handler.py  rotating_statuses_handler.py  sticky_message_handler.py  sticky_messages_poster.py  suggestion_expired_handler.py  suggestion_reactions.py  temp_role_ban_check.py  thread_closure_handler.py  ticket_config_handler.py  timed_event_executed.py  transcript_handlers.py  updates_handler.py
src/handlers/: moderation_handler.py  role_handler.py  ticket_handler.py
src/utils/: __init__.py  config.py  container_templates.py  database.py  database_old.py  db_manager.py  embeds.py  i18n.py  interaction_helpers.py  json_utils.py  logger.py  logger_structured.py  permission_system.py  permissions.py  ticket_session.py  time_utils.py
tests/: conftest.py
tests/unit/: test_config.py
